Se arreglaron algunos de los defectos encontrados con FindBugs que consideramos de mas prioridad